# denver

.cargo/: config
mcu/: .embed.toml  Cargo.toml
src/: main.rs
