[package]
name = "denver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
stm32-hal2 = { version = "1.3.4", features = ["l4x2", "l4rt", "embedded-hal"] }
defmt = "0.3.0"
defmt-rtt = "0.3.1"
rfm69 = "0.4.1"

[features]
default = [
  "defmt-default",
]

defmt-default = []
